Try to fix tom select z-index

--- a/assets/css/layouts/_grid.scss
+++ b/assets/css/layouts/_grid.scss
@@ -119,7 +119,10 @@
 
 *:has(> .l-grid) {
 	container: lgrid / inline-size;
-	z-index: 1;
+
+	&:not(.form-group) {
+		z-index: 1;
+	}
 }
 
 @container lgrid (width < 320px) {
